--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -31,7 +31,7 @@
  * - <a href="kmime/html/index.html"><b>kmime</b></a>.
  *   <i>A library for MIME handling.</i>
  *
- * - <a href="kontactinterfaces/html/index.html"><b>kontactinterfaces</b></a>
+ * - <a href="kontactinterface/html/index.html"><b>kontactinterface</b></a>
  *   <i>The glue for embedding KParts into Kontact.</i>
  *
  * - <a href="kpimidentities/html/index.html"><b>kpimidentities</b></a>
