--- a/README
+++ b/README
@@ -28,8 +28,10 @@ Here is an alphabetical list:
 
 * akonadi: client access library for using the Akonadi PIM data server.
 * kblog: C++ API for weblogging access
-* kcal: (Deprecated by kcalcore) C++ API for the iCalendar and vCalendar formats
+* kcal:  C++ API for the iCalendar and vCalendar formats
+         (Deprecated by kcalcore and kcalutils)
 * kcalcore: C++ API for the iCalendar and vCalendar formats
+* kcalutils: C++ library containing utility functions on top of kcalcore.
 * kcal/libical: a basic iCalendar protocol implementation, see RFCs 2245,2246
 * kholidays: C++ library for calendar holidays
 * kimap: C++ API for IMAP support
