Update email address
svn path=/trunk/KDE/kdepimlibs/; revision=1151909

--- a/doc/kioslave/mbox/index.docbook
+++ b/doc/kioslave/mbox/index.docbook
@@ -11,7 +11,7 @@
 
 <authorgroup>
 <author><personname><firstname>Bertjan</firstname><surname>Broeksema</surname></personname>
-<email>b.broeksema@home.nl</email></author>
+<email>broeksema@kde.org</email></author>
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
 </authorgroup>
  
