lots of APIDOX. less than 175 problems now, so that's about 100 less than before.
svn path=/trunk/KDE/kdepimlibs/; revision=1155742

--- a/kcalcore/Mainpage.dox
+++ b/kcalcore/Mainpage.dox
@@ -34,3 +34,5 @@
 
 // DOXYGEN_PROJECTNAME=KCalCore Library
 // DOXYGEN_EXCLUDE = libical
+// DOXYGEN_SET_EXCLUDE_PATTERNS += @topdir@/kcalcore/versit/*.h
+
