--- a/kcalcore/Mainpage.dox
+++ b/kcalcore/Mainpage.dox
@@ -23,10 +23,12 @@
  * The major authors of this library are (in alphabetical order):\n
  * Preston Brown \<pbrown@kde.org\>,
  * Reinhold Kainhofer \<reinhold@kainhofer.com\>,
- * Cornelius Schumacher \<schumacher@kde.org\>
+ * Sergio Martins \<iamsergio@gmail.com\>,
+ * Cornelius Schumacher \<schumacher@kde.org\>,
+ * Allen Winter \<winter@kde.org\>
  *
  * @maintainers
- * Allen Winter \<winter@kde.org\>
+ * Allen Winter \<winter@kde.org\> and Sergio Martins \<iamsergio.com\>
  *
  * @licenses
  * @lgpl
