SVN_SILENT fix email address.
svn path=/trunk/KDE/kdepimlibs/; revision=1157861

--- a/kcalcore/Mainpage.dox
+++ b/kcalcore/Mainpage.dox
@@ -28,7 +28,7 @@
  * Allen Winter \<winter@kde.org\>
  *
  * @maintainers
- * Allen Winter \<winter@kde.org\> and Sergio Martins \<iamsergio.com\>
+ * Allen Winter \<winter@kde.org\> and Sergio Martins \<iamsergio@gmail.com\>
  *
  * @licenses
  * @lgpl
