Match up emphasis tag.
svn path=/trunk/KDE/kdepimlibs/; revision=1160122

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -26,7 +26,7 @@
  *
  * - <a href="kcalutils/html/index.html"><b>kcalutils</b></a>.
  *   <i>Utility and user interface functions for accessing calendar data
- *   using the <a href="kcalcore/html/index.html">kcalcore</a> API.
+ *   using the <a href="kcalcore/html/index.html">kcalcore</a> API</i>.
  *
  * - <a href="kholidays/html/index.html"><b>kholidays</b></a>.
  *   <i>A library for calendar holidays.</i>
