no maintainers at this time
svn path=/trunk/KDE/kdepimlibs/; revision=1194264

--- a/kimap/Mainpage.dox
+++ b/kimap/Mainpage.dox
@@ -21,9 +21,7 @@
  * Sven Carstens \<s.carstens@gmx.de\>
  *
  * @maintainers
- * Tom Albers \<tomalbers@kde.nl\>,
- * Volker Krause \<vkrause@kde.org\>,
- * Allen Winter \<winter@kde.org\>
+ * none at the moment
  *
  * @licenses
  * @lgpl
