--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -37,7 +37,7 @@
  * - <a href="kldap/html/index.html"><b>kldap</b></a>.
  *   <i>An API for accessing LDAP.</i>
  *
- *   <a href="kmbox/html/index.html"><b>kmbox</b></a>.
+ * - <a href="kmbox/html/index.html"><b>kmbox</b></a>.
  *   <i>A library for accessing mail storages in MBox format.</i>
  *
  * - <a href="kmime/html/index.html"><b>kmime</b></a>.
