--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -13,6 +13,9 @@
  * - <a href="kabc/html/index.html"><b>kabc</b></a>.
  *   <i>An API for the KDE Addressbook.</i>
  *
+ * - <a href="kalarmcal/html/index.html"><b>kalarmcal</b></a>.
+ *   <i>An API for the KDE Alarm.</i>
+ *
  * - <a href="kblog/html/index.html"><b>kblog</b></a>.
  *   <i>An API for weblogging access.</i>
  *
