Modify kalarmcal summary

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -14,7 +14,7 @@
  *   <i>An API for the KDE Addressbook.</i>
  *
  * - <a href="kalarmcal/html/index.html"><b>kalarmcal</b></a>.
- *   <i>An API for the KDE Alarm.</i>
+ *   <i>An API for KAlarm alarms.</i>
  *
  * - <a href="kblog/html/index.html"><b>kblog</b></a>.
  *   <i>An API for weblogging access.</i>
